# NeDRexDB_v1_Archive

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prebuilt.yml  docker-compose.yml  docker-variables.env  pyproject.toml
adapters/: nedrex_adapter.py  target_disease_evidence_adapter.py
config/: biocypher_config.yaml  nedrex_schema_config.yaml
docker/: biocypher.toml  create_table.sh  import.sh  import_entrypoint.sh  requirements.txt
scripts/: nedrex_script.py  target_disease_script.py  update_import_script.py
