[tool.poetry]
name = "NeDRexDB_v1 archive through BioCypher"
version = "0.1.0"
description = "A setup to recreate NeDRexDB_v1 using BioCypher and docker"
authors = ["Andreas Maier <andreas.maier-1@uni-hamburg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "^0.4.5"
pyspark = "^3.3.1"
bioregistry = "0.6.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
